--- a/src/main/resources/assets/swampier_swamps/lang/en_us.json
+++ b/src/main/resources/assets/swampier_swamps/lang/en_us.json
@@ -5,5 +5,10 @@
 
 "_comment2": "Blocks",
   "block.swampier_swamps.mud_slab": "Mud Slab",
-  "block.swampier_swamps.mud_stairs": "Mud Stairs"
+  "block.swampier_swamps.mud_stairs": "Mud Stairs",
+  "block.swampier_swamps.white_froglight": "White Froglight",
+  "block.swampier_swamps.magenta_froglight": "Magenta Froglight",
+  "block.swampier_swamps.light_blue_froglight": "Light Blue Froglight",
+
+  "block.swampier_swamps.cattail": "Cattail"
 }
