Finished Froglight Blocks
- Added all Froglight color Variants
- Added a few new Frog Variants
- Created a Tag for Froglights
- Made Froglights bouncy
- Fixed Vines becoming randomly waterlogged

--- a/src/main/resources/assets/swampier_swamps/lang/en_us.json
+++ b/src/main/resources/assets/swampier_swamps/lang/en_us.json
@@ -9,6 +9,15 @@
   "block.swampier_swamps.white_froglight": "White Froglight",
   "block.swampier_swamps.magenta_froglight": "Magenta Froglight",
   "block.swampier_swamps.light_blue_froglight": "Light Blue Froglight",
-
+  "block.swampier_swamps.yellow_froglight": "Yellow Froglight",
+  "block.swampier_swamps.lime_froglight": "Lime Froglight",
+  "block.swampier_swamps.pink_froglight": "Pink Froglight",
+  "block.swampier_swamps.gray_froglight": "Gray Froglight",
+  "block.swampier_swamps.light_gray_froglight": "Light Gray Froglight",
+  "block.swampier_swamps.cyan_froglight": "Cyan Froglight",
+  "block.swampier_swamps.blue_froglight": "Blue Froglight",
+  "block.swampier_swamps.brown_froglight": "Brown Froglight",
+  "block.swampier_swamps.red_froglight": "Red Froglight",
+  "block.swampier_swamps.black_froglight": "Black Froglight",
   "block.swampier_swamps.cattail": "Cattail"
 }
