--- a/src/main/resources/assets/swampier_swamps/lang/en_us.json
+++ b/src/main/resources/assets/swampier_swamps/lang/en_us.json
@@ -2,6 +2,7 @@
 "_comment1": "Items",
   "item.swampier_swamps.frog_leg": "Frog Leg",
   "item.swampier_swamps.cooked_frog_leg": "Cooked Frog Leg",
+  "item.swampier_swamps.dragonfly_spawn_egg": "Dragonfly Spawn Egg",
 
 "_comment2": "Blocks",
   "block.swampier_swamps.swamp_vine": "Swamp Vines",
@@ -21,5 +22,10 @@
   "block.swampier_swamps.red_froglight": "Red Froglight",
   "block.swampier_swamps.black_froglight": "Black Froglight",
   "block.swampier_swamps.cattail": "Cattail",
-  "block.swampier_swamps.sinking_lily_pad": "Sinking Lily Pad"
+  "block.swampier_swamps.sinking_lily_pad": "Sinking Lily Pad",
+  "block.swampier_swamps.big_lily_pad": "Big Lily Pad",
+  "block.swampier_swamps.small_lily_pad": "Small Lily Pad",
+
+"_comment3": "Entities",
+  "entity.swampier_swamps.dragonfly": "Dragonfly"
 }
