Started World Gen...
- Slightly edited Dragonfly flying pathfinding to make them fly higher (I hope).
- Added Cattail to swamp world generation.
- Added Small Lily Pads to swamp world generation.

--- a/src/main/resources/assets/swampier_swamps/lang/en_us.json
+++ b/src/main/resources/assets/swampier_swamps/lang/en_us.json
@@ -24,7 +24,7 @@
   "block.swampier_swamps.cattail": "Cattail",
   "block.swampier_swamps.sinking_lily_pad": "Sinking Lily Pad",
   "block.swampier_swamps.big_lily_pad": "Big Lily Pad",
-  "block.swampier_swamps.small_lily_pad": "Small Lily Pad",
+  "block.swampier_swamps.small_lily_pad": "Small Lily Pads",
 
 "_comment3": "Entities",
   "entity.swampier_swamps.dragonfly": "Dragonfly"
