--- a/src/main/resources/assets/swampier_swamps/lang/en_us.json
+++ b/src/main/resources/assets/swampier_swamps/lang/en_us.json
@@ -25,6 +25,7 @@
   "block.swampier_swamps.sinking_lily_pad": "Sinking Lily Pad",
   "block.swampier_swamps.big_lily_pad": "Big Lily Pad",
   "block.swampier_swamps.small_lily_pad": "Small Lily Pads",
+  "block.swampier_swamps.decaying_kelp": "Decaying Kelp",
 
 "_comment3": "Entities",
   "entity.swampier_swamps.dragonfly": "Dragonfly"
