Started work on Gas Lamp and Optimizations
- Optimized Swamp Gas even more
- Added Gas Lamp (not finished)
- A few small world gen things, like new NBT files

--- a/src/main/resources/assets/swampier_swamps/lang/en_us.json
+++ b/src/main/resources/assets/swampier_swamps/lang/en_us.json
@@ -28,6 +28,7 @@
   "block.swampier_swamps.small_lily_pad": "Small Lily Pads",
   "block.swampier_swamps.decaying_kelp": "Decaying Kelp",
   "block.swampier_swamps.fertile_farmland": "Fertile Farmland",
+  "block.swampier_swamps.gas_lamp": "Gas Lamp",
 
 "_comment3": "Entities",
   "entity.swampier_swamps.dragonfly": "Dragonfly"
